bynkc/tests/fixtures/negative/276_contract_not_bool/src/demo/c.bynk
commons demo.c

fn f(x: Int) -> Int
  ensures bad: x + 1
{
  x
}
